# BeERS

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg  worker_setup.sh
.github/workflows/: docker_publish.yml  publish.yml  test_suite.yml
docker/: beer_job.Dockerfile  beers_job.Dockerfile
docs/: index.md
src/beer/: __init__.py  models.py  nvidia.py  worker_utils.py
src/beer/bot/: job.py  telegram_bot.py
src/beer/entrypoints/: beer
src/beer/manager/: api.py  beer_db.py  service.py
src/beers/: models.py  utils.py  worker_utils.py
src/beers/bot/: __init__.py  job.py  telegram_bot.py
src/beers/entrypoints/: beers
src/beers/manager/: api.py  beer_db.py  service.py
src/beers/scripts/: beers  worker_setup.sh
swarmrocks/: swarmpit.sh  swarmprom.sh  traefik.sh
tests/: test_dummy.py
