[metadata]
name = beer
description = Better Enabled Resources
url = https://github.com/grok-ai/beer
long_description = file: README.md
author = Valentino Maiorca
author_email = valentino@maiorca.xyz
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    # Add project specific dependencies
    # Stuff easy to break with updates

    # Stable stuff usually backward compatible
    rich
    python-dotenv


[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
