[metadata]
name = beers
description = Better Enabled Resource Sharing
url = https://github.com/grok-ai/BeERS
long_description = file: README.md
long_description_content_type = text/markdown
author = Valentino Maiorca
author_email = valentino@maiorca.xyz
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    # Add project specific dependencies
    # Stuff easy to break with updates
    orjson
    requests
    typer
    schedule
    rich
    python-dotenv
    pydantic

scripts =
    src/beers/entrypoints/beers

[options.data_files]
. = setup.cfg, worker_setup.sh

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

manager =
    peewee
    docker
    fastapi
    uvicorn[standard]

bot =
    python-telegram-bot

worker =
    docker
    psutil

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
    %(manager)s
    %(bot)s
    %(worker)s
